--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,8 +1,8 @@
 name: Run API tests
 on:
   schedule:
-    - cron: '30 7 * * 2'
-    - cron: '30 7 * * 3' 
+    - cron: '47 18 * * 1'
+    - cron: '55 18 * * 1' 
   workflow_dispatch:
     inputs:
         environment:
@@ -21,11 +21,11 @@ jobs:
 
     steps:
       - name: Set staging env
-        if: ${{ inputs.environment == 'staging' || github.event.schedule == '30 7 * * 2'}}
+        if: ${{ inputs.environment == 'staging' || github.event.schedule == '47 18 * * 1'}}
         run: |
           echo "test_env=staging" >> $GITHUB_ENV    
       - name: Set dev env
-        if: ${{ inputs.environment == 'development' || github.event.schedule == '30 7 * * 3'}}
+        if: ${{ inputs.environment == 'development' || github.event.schedule == '55 18 * * 1''}}
         run: |
           echo "test_env=development" >> $GITHUB_ENV    
       - name: Run tests
