--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,4 +29,5 @@ jobs:
         run: |
           echo "test_env=development" >> $GITHUB_ENV    
       - name: Run tests
-        run: WORK_ENV=${{ env.test_env }} node ./qq.js
+        uses: ./
+        run: WORK_ENV=${{ env.test_env }} node qq.js
